# braintrust-agent

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  justfile  pyproject.toml
.devcontainer/: devcontainer.json
agents/: pyproject.toml
agents/basic/: agent.py
scripts/: add_trace.py
